# newspaper

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/: make_images.py
docs/superpowers/plans/: 2026-07-01-paper-daily-digest.md
docs/superpowers/specs/: 2026-07-01-paper-daily-digest-design.md
paper/: cli.py  compose.py  config.py  html.py  ingest.py  llm.py  models.py  render.py  secrets.py  store.py  util.py
paper/connectors/: __init__.py  _http.py  base.py  calendar_.py  claude_code.py  codex.py  git.py  github.py  gmail.py  openloops.py  sports.py  technews.py  weather.py
tests/: conftest.py  test_claude_code.py  test_cli.py  test_codex.py  test_compose.py  test_config.py  test_git.py  test_html.py  test_ingest.py  test_llm.py  test_models_store.py  test_new_sections.py  test_registry.py  test_render.py  test_sections.py
tests/fixtures/: claude_session.jsonl  codex_rollout.jsonl
ui/: README.md  index.html  styles.css
